# My-programs

./: .gitignore  README.md
1_creating-files-with-Lorem-Ipsum/: CMakeLists.txt  README.md  functions.cpp  functions.h  main.cpp
2_function-and-templates/: CMakeLists.txt  README.md
2_function-and-templates/GTest/: CMakeLists.txt  GTest.cpp
2_function-and-templates/include/: Handler.h  Handler.inl  OneParameter.h  OneParameter.inl  TwoParameter.h  TwoParameter.inl
2_function-and-templates/src/: CMakeLists.txt  main.cpp
